# echo-chat

./: .gitignore  README.md  config.py  create_facts.py  create_master_timeline.py  create_timeline.py  facts_output.txt  main.py  pyproject.toml  qdrant_uploader.py  sms_to_knowledge_base.py  sms_to_vector_db.py  vector_store.py
backend/echo-chat/: main.py  pyproject.toml
backend/echo-chat/config/: settings.py
backend/echo-chat/core/: database.py  models.py  vector_store.py
backend/echo-chat/data_processing/: create_qdrant_db.py  fact_extraction.py  sms_importer.py  timeline_generation.py
chatbot/Me/: agent.py
