[project]
name = "echo-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.3",
]
[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "ALL", # include all the rules, including new ones
]
[tool.ruff.format]
skip-magic-trailing-comma = false